--- a/spinner.html
+++ b/spinner.html
@@ -1,4 +1,4 @@
-<div class="logoSpinner" id="12">
+<div class="logoSpinner">
     <div class="path">
         <div class="polygon polygon0"></div>
         <div class="polygon polygon1"></div>
